--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Arquitectura</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <nav class="nav">
+          <h1>Arquitectura<span>Bosque</span></h1>
+          <div class="menu">
+            <div class="menu-top">
+              <img src="./img/telefono.png" alt="llamar" />
+              <p>01-800-0000-000</p>
+            </div>
+            <div class="menu-bottom">
+                <a href="">Home</a>
+                <a href="">About Us</a>
+                <a href="">Models</a>
+                <a href="">Gallery</a>
+                <a href="">Contact Us</a>
+            </div>
+          </div>
+        </nav>
+        <div class="content"></div>
+      </div>
+    </header>
+  </body>
 </html>
